# ai-pdf-renamer

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  BUGS_AND_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  DESIGN.md  README.md  RECOGNITION-RATE.md  RELEASE.md  RELIABILITY.md  RUNBOOK.md  apple-silicon.md  category-checks.md  embeddings-checks.md  github-actions-followup.md  heuristic-cleanup.md  heuristic-followup.md  llm-cleanup.md  log-cleanup.md  next-js-notes.md  paths-checks.md  processing_rules.example.json  pytest-cleanup.md  regex-notes.md  repo_deep_audit_2026_04_26.md  ruff-cleanup.md  ruff-followup.md  score-checks.md  score-notes.md  tui-notes.md  watch-cleanup.md
docs/product-specs/: PRD.md
src/: __init__.py  log_notes.py  watch_notes.py
src/ai_pdf_renamer/: cache.py  cli.py  cli_parser.py  config.py  config_resolver.py  data_paths.py  filename.py  gui.py  heuristics.py  llm.py  llm_backend.py  llm_parsing.py  llm_prompts.py  llm_schema.py  loaders.py  logging_utils.py  pdf_extract.py  rename_ops.py  renamer.py  renamer_extract.py  renamer_files.py  renamer_lookup.py  renamer_output.py  renamer_progress.py  rules.py  text_utils.py  tui.py  tui_assets.py  undo_cli.py
src/ai_pdf_renamer/data/: category_aliases.json  heuristic_patterns.json  heuristic_scores.json  llm_response_schema.json  meta_stopwords.json
tests/: conftest.py  test_cache.py  test_cli.py  test_cli_helpers.py  test_cli_helpers_part1.py  test_cli_helpers_part2.py  test_cli_part1.py  test_cli_part2.py  test_coverage_gaps.py  test_data_paths.py  test_filename_deep.py  test_filename_deep_part1.py  test_filename_deep_part2.py  test_heuristic_validation.py  test_heuristics.py  test_llm_backend.py  test_llm_functions.py  test_llm_parsing.py  test_llm_prompts.py  test_logging_utils.py  test_new_features.py  test_new_llm_features.py  test_pdf_extract.py  test_pdf_extract_part1.py  test_pdf_extract_part2.py  test_pdf_extract_part3.py  test_pdf_extract_part4.py  test_rename_ops.py  test_renamer_deep.py  test_renamer_extract.py  test_renamer_generate_filename.py  test_renamer_lookup.py  test_renamer_pipeline.py  test_renamer_pipeline_part1.py  test_renamer_pipeline_part2.py  test_renamer_progress.py  test_repo_contracts.py  test_round5_cli.py  test_round5_renamer.py  test_round5_tui_heuristics.py  (+14 more)
