[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pdf-renamer"
version = "0.1.0"
description = "Rename PDFs based on extracted text, heuristic scoring, and an optional local LLM."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "sebastian" }]
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
pdf = [
  "pymupdf>=1.23.0",
]
tokens = [
  "tiktoken>=0.5.0",
]
ocr = [
  "ocrmypdf>=14.0.0",
]
embeddings = [
  "sentence-transformers>=2.0.0",
]
llama-cpp = [
  "llama-cpp-python>=0.2.0",
]
tui = [
  "textual>=0.40.0",
  "rich>=13.0.0",
]

[project.scripts]
ai-pdf-renamer = "ai_pdf_renamer.cli:main"
ai-pdf-renamer-tui = "ai_pdf_renamer.tui:main"
ai-pdf-renamer-gui = "ai_pdf_renamer.tui:main"
ai-pdf-renamer-undo = "ai_pdf_renamer.undo_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_pdf_renamer = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # Allow explicit exception chaining omissions in a small codebase.
  "B904",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
# Optional deps (fitz, tiktoken, ocrmypdf, sentence_transformers) not always installed.
[[tool.mypy.overrides]]
module = ["fitz", "tiktoken", "ocrmypdf", "sentence_transformers"]
ignore_missing_imports = true
