[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-pdf-renamer"
dynamic = ["version"]
description = "Rename PDFs based on extracted text, heuristic scoring, and an optional local LLM."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "sebastian" }]
dependencies = [
  "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0",
]
pdf = [
  "pymupdf>=1.23.0",
]
tokens = [
  "tiktoken>=0.5.0",
]
ocr = [
  "ocrmypdf>=14.0.0",
]
embeddings = [
  "sentence-transformers>=2.0.0",
]
llama-cpp = [
  "llama-cpp-python>=0.2.0",
]
tui = [
  "textual>=0.40.0",
  "rich>=13.0.0",
]

[project.scripts]
ai-pdf-renamer = "ai_pdf_renamer.cli:main"
ai-pdf-renamer-tui = "ai_pdf_renamer.tui:main"
ai-pdf-renamer-gui = "ai_pdf_renamer.tui:main"
ai-pdf-renamer-undo = "ai_pdf_renamer.undo_cli:main"

[tool.hatch.version]
path = "src/ai_pdf_renamer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pdf_renamer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["ai_pdf_renamer"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "PT", "SIM", "RUF"]
ignore = [
  # Allow explicit exception chaining omissions in a small codebase.
  "B904",
  # subprocess/exec — flagged in CLI tool code that needs it.
  "S603", "S607",
  # assert in tests is fine.
  "S101",
  # Hardcoded password/token bindings — false positives on config field names.
  "S105", "S106",
  # Ambiguous unicode characters — intentional German text (umlauts etc.).
  "RUF001", "RUF002",
  # Composite assertions in tests — not worth splitting.
  "PT018",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  # Tests legitimately use subprocess, hardcoded paths, non-random, etc.
  "S", "PT011",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["src/ai_pdf_renamer/tui\\.py"]
# Optional deps not always installed in CI or dev environments.
[[tool.mypy.overrides]]
module = ["fitz", "tiktoken", "ocrmypdf", "sentence_transformers", "llama_cpp", "textual", "textual.*", "rich", "rich.*", "jsonschema"]
ignore_missing_imports = true
